# motor-imagery-AI

./: .gitignore  README.md  analyze_results.py  brain_board_EDA.ipynb  brain_board_augmentation.ipynb  brain_board_ensemble.ipynb  clean_train_eval.py  evaluate_holdout.py  pyproject.toml  requirements-dev.txt  requirements.txt  train.py  train_multiple_splits.py
configs/: default.yaml  full_binary.yaml  full_binary_64_channels.yaml  full_binary_all_channels.yaml  full_binary_all_channels_4way.yaml  full_binary_motor_channels.yaml  new_full_binary_all_channels_4way.yaml
notebooks/: brain_board_EDA-2.ipynb  brain_board_ensemble.ipynb  brain_board_ensemble_leakage.ipynb  brain_board_ensemble_subject_based.ipynb  eeg_analysis.ipynb  experiments.ipynb  left-right-and-rest-classification (7)-Copy1 (3).ipynb  left-right-and-rest-classification (7).ipynb  left-right-and-rest-classification.ipynb  left-right-and-rest.ipynb  mindstride_fixed_v2.ipynb
notebooks/models/: best_ml_binary_lr_21ch.pkl  best_ml_binary_lr_21ch_meta.json  eegnet_21ch_binary_lr_best_grid.pth  eegnet_21ch_binary_lr_best_grid_meta.json  eegnet_21ch_binary_lr_single_run.pth  eegnet_64ch_3class_single_run.pth  eegnet_64ch_3class_single_run_meta.json  global_best_binary_lr.pth  global_best_binary_lr_meta.json
notebooks/results/: all_metrics.json  cv_details.json  full_experiment_export.json  summary_metrics.csv
src/: __init__.py  config.py  engine.py  utils.py
src/data/: __init__.py  dataset.py  (+5 more)
tests/: test_basic.py  test_eegnet_pipeline.py  test_integration.py  test_models.py  test_preprocessing.py
(+8 files in other folders)
